-- Sunrise Dental Clinic — schema
--
-- The schema is owned by this file rather than generated by Hibernate, so that
-- constraints the application must not be able to violate live in the database
-- itself. clinic-api is configured with ddl-auto=validate and will refuse to
-- start if the Java entities drift away from these tables.

USE sunrise_dental;

DROP TABLE IF EXISTS appointment_audit;
DROP TABLE IF EXISTS bill;
DROP TABLE IF EXISTS appointment;
DROP TABLE IF EXISTS patient;
DROP TABLE IF EXISTS treatment_type;
DROP TABLE IF EXISTS dentist;
DROP TABLE IF EXISTS staff;
DROP TABLE IF EXISTS clinic_setting;

-- ---------------------------------------------------------------------------
-- Reference and configuration data
-- ---------------------------------------------------------------------------

CREATE TABLE clinic_setting (
    setting_key   VARCHAR(50)    NOT NULL,
    setting_value VARCHAR(255)   NOT NULL,
    description   VARCHAR(255)   NULL,
    PRIMARY KEY (setting_key)
) ENGINE = InnoDB;

CREATE TABLE staff (
    id            BIGINT       NOT NULL AUTO_INCREMENT,
    username      VARCHAR(50)  NOT NULL,
    password_hash VARCHAR(100) NOT NULL,
    full_name     VARCHAR(100) NOT NULL,
    role          VARCHAR(20)  NOT NULL,
    active        BOOLEAN      NOT NULL DEFAULT TRUE,
    created_at    DATETIME     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (id),
    CONSTRAINT uk_staff_username UNIQUE (username),
    CONSTRAINT ck_staff_role CHECK (role IN ('RECEPTIONIST', 'MANAGER'))
) ENGINE = InnoDB;

CREATE TABLE dentist (
    id             BIGINT       NOT NULL AUTO_INCREMENT,
    name           VARCHAR(100) NOT NULL,
    specialization VARCHAR(100) NULL,
    active         BOOLEAN      NOT NULL DEFAULT TRUE,
    PRIMARY KEY (id)
) ENGINE = InnoDB;

CREATE TABLE treatment_type (
    id       BIGINT         NOT NULL AUTO_INCREMENT,
    code     VARCHAR(30)    NOT NULL,
    name     VARCHAR(100)   NOT NULL,
    base_fee DECIMAL(10, 2) NOT NULL,
    active   BOOLEAN        NOT NULL DEFAULT TRUE,
    PRIMARY KEY (id),
    CONSTRAINT uk_treatment_code UNIQUE (code),
    CONSTRAINT ck_treatment_fee_positive CHECK (base_fee >= 0)
) ENGINE = InnoDB;

-- ---------------------------------------------------------------------------
-- Operational data
-- ---------------------------------------------------------------------------

CREATE TABLE patient (
    id             BIGINT       NOT NULL AUTO_INCREMENT,
    patient_no     VARCHAR(20)  NOT NULL,
    name           VARCHAR(100) NOT NULL,
    address        VARCHAR(255) NOT NULL,
    contact_number VARCHAR(20)  NOT NULL,
    created_at     DATETIME     NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (id),
    CONSTRAINT uk_patient_no UNIQUE (patient_no),
    INDEX idx_patient_contact (contact_number),
    INDEX idx_patient_name (name)
) ENGINE = InnoDB;

CREATE TABLE appointment (
    id                BIGINT      NOT NULL AUTO_INCREMENT,
    appointment_no    VARCHAR(20) NOT NULL,
    patient_id        BIGINT      NOT NULL,
    dentist_id        BIGINT      NOT NULL,
    treatment_type_id BIGINT      NOT NULL,
    appointment_date  DATE        NOT NULL,
    appointment_time  TIME        NOT NULL,
    status            VARCHAR(20) NOT NULL DEFAULT 'SCHEDULED',
    created_by        BIGINT      NOT NULL,
    created_at        DATETIME    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (id),
    CONSTRAINT uk_appointment_no UNIQUE (appointment_no),

    -- The clinic's headline problem in the scenario is double booking. This
    -- constraint makes it impossible at the storage layer, so it holds even if
    -- two receptionists submit the same slot at the same instant and the
    -- service-layer check in both requests passes before either has committed.
    CONSTRAINT uk_dentist_slot UNIQUE (dentist_id, appointment_date, appointment_time),

    CONSTRAINT fk_appt_patient   FOREIGN KEY (patient_id)        REFERENCES patient (id),
    CONSTRAINT fk_appt_dentist   FOREIGN KEY (dentist_id)        REFERENCES dentist (id),
    CONSTRAINT fk_appt_treatment FOREIGN KEY (treatment_type_id) REFERENCES treatment_type (id),
    CONSTRAINT fk_appt_staff     FOREIGN KEY (created_by)        REFERENCES staff (id),
    CONSTRAINT ck_appt_status CHECK (status IN ('SCHEDULED', 'COMPLETED', 'CANCELLED')),

    INDEX idx_appt_date (appointment_date),
    INDEX idx_appt_patient (patient_id)
) ENGINE = InnoDB;

CREATE TABLE bill (
    id               BIGINT         NOT NULL AUTO_INCREMENT,
    appointment_id   BIGINT         NOT NULL,
    consultation_fee DECIMAL(10, 2) NOT NULL,
    treatment_fee    DECIMAL(10, 2) NOT NULL,
    total_amount     DECIMAL(10, 2) NOT NULL,
    issued_at        DATETIME       NOT NULL DEFAULT CURRENT_TIMESTAMP,
    issued_by        BIGINT         NOT NULL,
    PRIMARY KEY (id),

    -- One bill per appointment: re-issuing a receipt must not create a second
    -- billable record, which would corrupt the revenue report.
    CONSTRAINT uk_bill_appointment UNIQUE (appointment_id),

    CONSTRAINT fk_bill_appointment FOREIGN KEY (appointment_id) REFERENCES appointment (id),
    CONSTRAINT fk_bill_staff       FOREIGN KEY (issued_by)      REFERENCES staff (id),
    CONSTRAINT ck_bill_total_positive CHECK (total_amount >= 0)
) ENGINE = InnoDB;

-- Written to by a trigger, never by the application. Keeping the audit trail
-- out of application control means a cancellation cannot go unrecorded.
CREATE TABLE appointment_audit (
    id             BIGINT      NOT NULL AUTO_INCREMENT,
    appointment_id BIGINT      NOT NULL,
    appointment_no VARCHAR(20) NOT NULL,
    old_status     VARCHAR(20) NOT NULL,
    new_status     VARCHAR(20) NOT NULL,
    changed_at     DATETIME    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (id),
    INDEX idx_audit_appointment (appointment_id)
) ENGINE = InnoDB;
