package lk.icbt.clinic.model;

/** Where an appointment is in its lifecycle. */
public enum AppointmentStatus {
    SCHEDULED, COMPLETED, CANCELLED
}
