package lk.icbt.clinic.model;

/** What a logged-in user is allowed to do. */
public enum StaffRole {
    RECEPTIONIST, MANAGER
}
