package lk.icbt.clinic.model;

/** The treatments the clinic offers. Stable identifier that billing rules key on. */
public enum TreatmentCode {
    CONSULT, CLEANING, FILLING, EXTRACTION, ROOT_CANAL, WHITENING
}
